# ocaml-arrow

./: .gitignore  README.md  arrow.opam
.github/workflows/: workflow.yml
c_api/stubs/: bindings.ml  gen.ml
c_api/tests/: bitset.ml  builder.ml  dune  exceptions.ml  fast.ml  fields.ml  ppx.ml  ppx_table.ml  python.ml  reader.ml  table.ml
c_api/wrapper/: arrow_c_api.cc  arrow_c_api.h  arrow_c_api.ml  builder.ml  builder.mli  c_api.ml  compression.ml  dune  f.ml  f.mli  file_reader.ml  file_reader.mli  parquet_reader.ml  parquet_reader.mli  table.ml  table.mli  valid.ml  valid.mli  wrapper.ml  wrapper.mli  writer.ml  writer.mli
examples/: basics.ml  dune
ppx/: dune  ppx_arrow.ml  ppx_arrow.mli
ppx_runtime/: ppx_arrow_runtime.ml
src/arrow/: array.ml  array.mli  arrow.ml  column.ml  column.mli  data_type.ml  data_type.mli  dune  table.ml  table.mli
src/dataframe/: array.ml  array.mli  data_type.ml  data_type.mli  kind.ml  kind.mli  table.mli
src/ppx/: ppx_arrow.ml
src/ppx_runtime/: dune  ppx_arrow_runtime.ml
src/stubs/: arrow_bindings.ml  arrow_gen.ml  base_bindings.ml  bindings.ml  dune  stubs_generated.ml
src/tests/: array_tests.ml  dune
src/wrapper/: arrow_c_api.cc  arrow_c_api.h  arrow_c_api.ml  builder.ml  builder.mli  compression.mli  datatype.ml  datatype.mli  dune  f.ml  file_reader.ml  parquet_reader.ml  parquet_reader.mli  table.ml  table.mli  valid.mli  wrapper.ml  wrapper.mli
src/wrappers/: dune  wrapper.ml  wrapper.mli  wrapper_generated.ml  wrapper_generated.mli
tests/: builder.ml  fast.ml  ppx.ml  ppx_t.ml  ppx_t.mli  ppx_table.ml  pyarrow.ml  python.ml  table.ml
