opam-version: "2.0"
name:         "arrow"
bug-reports:  "https://github.com/LaurentMazare/ocaml-arrow/issues"
homepage:     "https://github.com/LaurentMazare/ocaml-arrow"
dev-repo:     "git+https://github.com/LaurentMazare/ocaml-arrow.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]
install: []
remove:  []

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "base" {>= "0.12.0"}
  "ctypes" {>= "0.5"}
  "ctypes-foreign"
  "dune" {>= "1.3.0" build}
  "ocaml" {>= "4.06"}
  "ocaml-compiler-libs"
  "ppx_custom_printf"
  "ppx_expect"
  "ppx_sexp_conv"
  "sexplib"
  "stb_image"
  "stdio"
  "core_kernel"
  "pyml"
]

depopts: [
]

conflicts: [
]

available: [ os = "linux" ]

synopsis: "Arrow bindings for OCaml"
description: """
Bindings for Apache Arrow.
"""
